# humusha

./: .gitignore  CITATION.cff  Makefile  README.md  apply_substitutions.py  build_instance_finders.py  build_utils.sh  config.json  find_patterns.py  flake.nix  generate_substitutions.py  humusha  make_subs.py  models.py  odpsub  pyproject.toml  sub_patt.py
output/DMOP/: DMOP.sub_cop.clif  DMOP.substituted_pcop.clif
output/MDMOP/: MDMOP.cdp.instances  MDMOP.cdp.patterns  MDMOP.cdp.subs  MDMOP.cdp.substitutions  MDMOP.pcop.instances  MDMOP.rr.instances  MDMOP.sub_cop.clif  MDMOP.substituted_cdp.clif  MDMOP.substituted_cop.clif
output/MNaive_animal_ontology2/: MNaive_animal_ontology2.rr.instances  MNaive_animal_ontology2.sub_cra_e.clif  MNaive_animal_ontology2.substituted_cra_e.clif
output/MOntoDerm_5.3/: MOntoDerm_5.3.pcop.instances  MOntoDerm_5.3.rr.instances  MOntoDerm_5.3.sub_rr.clif  MOntoDerm_5.3.substituted_pcop.clif
output/MSEGOv3/: MSEGOv3.pcop.instances  MSEGOv3.rr.instances  MSEGOv3.sub_cdp.clif  MSEGOv3.substituted_rr.clif
output/MSceneOntology/: MSceneOntology.rr.instances  MSceneOntology.sub_rr.clif  MSceneOntology.substituted_cop.clif
output/MScene_rr/: MScene_rr.formatted.clif  MScene_rr.rr.instances  MScene_rr.rr.patterns  MScene_rr.rr.substitutions  MScene_rr.substituted_rr.clif
output/PhysicalEntity/: PhysicalEntity.sub_cdp.clif  (+1 more)
test_files/: DMOP.clif  MScene_rr.clif  test_cdp.clif  test_cop.clif  test_cra_a.clif  test_cra_b.clif  test_cra_e.clif  test_ontology.clif  test_pcop.clif  test_qdp.clif  test_rr.clif  test_rt.clif
(+75 files in other folders)
